--- a/ProjetAgrégateur/Acceuil.xaml
+++ b/ProjetAgrégateur/Acceuil.xaml
@@ -9,11 +9,11 @@
     <Grid>
         <Button Content="Home" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
         <Button Content="News" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="News_Click"/>
-        <Button Content="Mess" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
-        <Button Content="Crypto" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
-        <Button Content="Pokemon" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
+        <Button Content="Mess" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Mess_Click"/>
+        <Button Content="Crypto" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Crypto_Click"/>
+        <Button Content="Pokemon" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Pokemon_Click"/>
         <Canvas HorizontalAlignment="Left" Height="378" Margin="70,32,0,0" VerticalAlignment="Top" Width="714"/>
-        <Button Content="Météo" HorizontalAlignment="Left" Margin="10,278,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
+        <Button Content="Météo" HorizontalAlignment="Left" Margin="10,278,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Meteo_Click"/>
 
     </Grid>
 </Window>
