--- a/ProjetAgrégateur/Windows/CryptoWindow.xaml
+++ b/ProjetAgrégateur/Windows/CryptoWindow.xaml
@@ -8,7 +8,7 @@
         Title="CryptoMonaie" Height="450" Width="800">
     <Grid>
         <Button Content="Home" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Home_Click"/>
-        <Button Content="News" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
+        <Button Content="Memes" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
         <Button Content="Mess" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
         <Button Content="Crypto" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
         <Button Content="Pokemon" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
