--- a/ProjetAgrégateur/Windows/MemeWindow.xaml
+++ b/ProjetAgrégateur/Windows/MemeWindow.xaml
@@ -8,10 +8,10 @@
         Title="Memes" Height="450" Width="800">
     <Grid>
         <Button Content="Home" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Home_Click"/>
-        <Button Content="News" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="News_Click"/>
-        <Button Content="Mess" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Mess_Click"/>
-        <Button Content="Crypto" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Crypto_Click"/>
-        <Button Content="Pokemon" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Poke_Click"/>
+        <Button Content="News" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="55" Height="40" />
+        <Button Content="Mess" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="55" Height="40" />
+        <Button Content="Crypto" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Width="55" Height="40" />
+        <Button Content="Pokemon" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="55" Height="40" />
         <Canvas HorizontalAlignment="Left" Height="378" Margin="70,32,0,0" VerticalAlignment="Top" Width="714">
             <TextBlock x:Name="Meme1" Height="140" Canvas.Left="34" TextWrapping="Wrap" Text="Meme" Canvas.Top="39" Width="222"/>
             <TextBlock x:Name="Meme2" Height="140" Canvas.Left="34" TextWrapping="Wrap" Text="Meme" Canvas.Top="198" Width="222"/>
@@ -21,7 +21,7 @@
             <TextBlock x:Name="Meme6" Height="140" Canvas.Left="534" TextWrapping="Wrap" Text="Meme" Canvas.Top="39" Width="170"/>
 
         </Canvas>
-        <Button Content="Météo" HorizontalAlignment="Left" Margin="10,278,0,0" VerticalAlignment="Top" Width="55" Height="40" Click="Meteo_Click"/>
+        <Button Content="Météo" HorizontalAlignment="Left" Margin="10,278,0,0" VerticalAlignment="Top" Width="55" Height="40" />
 
     </Grid>
 </Window>
