--- a/ProjetAgrégateur/Windows/PokeWindow.xaml
+++ b/ProjetAgrégateur/Windows/PokeWindow.xaml
@@ -12,7 +12,14 @@
         <Button Content="Mess" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
         <Button Content="Crypto" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
         <Button Content="Pokemon" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
-        <Canvas HorizontalAlignment="Left" Height="378" Margin="70,32,0,0" VerticalAlignment="Top" Width="714"/>
+        <Canvas HorizontalAlignment="Left" Height="378" Margin="70,32,0,0" VerticalAlignment="Top" Width="714">
+            <Button Content="Fav" Canvas.Left="150" Canvas.Top="72" Width="32" Height="16" />
+            <Button Content="Fav" Canvas.Left="150" Canvas.Top="92" Width="32" Height="16" />
+            <Button Content="Fav" Canvas.Left="150" Canvas.Top="112" Width="32" Height="16" />
+            <TextBlock  x:Name="Poke1" Canvas.Left="32" TextWrapping="Wrap" Text="Poke 1" Canvas.Top="72"/>
+            <TextBlock  x:Name="Poke2" Canvas.Left="32" TextWrapping="Wrap" Text="Poke 2" Canvas.Top="92"/>
+            <TextBlock  x:Name="Poke3" Canvas.Left="32" TextWrapping="Wrap" Text="Poke 3" Canvas.Top="112"/>
+        </Canvas>
         <Button Content="Météo" HorizontalAlignment="Left" Margin="10,278,0,0" VerticalAlignment="Top" Width="55" Height="40"/>
 
     </Grid>
